--- a/Index.html
+++ b/Index.html
@@ -36,36 +36,37 @@
        
     <hr size="3" noshade>
     <h3>Work Experience</h3>
-    <table  cellspacing="10"> <!-- used MDN website to get format for table and styling/behavior, use cellspacing for space-->
+    <table border="1px"  cellspacing="10"> <!-- used MDN website to get format for table and styling/behavior, use cellspacing for space-->
         <thead>
             <tr>
                 <th>Dates</th>
                 <th>Work</th>
             </tr>
-
         </thead>
-        <tbody></tbody>
+        <tbody>
+            <tr>
+                <td>2018 - Present</td>
+                <td>Process Engineer at The Boeing Company</td>
+            </tr>
+            <tr>
+                <td>2015 - 2018</td>
+                <td>Quality Systems Engineer at The Boeing Company</td>
+            </tr>
+            <tr>
+                <td>2011 - 2015</td>
+                <td>Production Manufacturing Manager at The Boeing Company</td>
+            </tr>
+            <tr>
+                <td>2009 - 2011</td>
+                <td>Industrial Engineer Lead at The Boeing Company</td>
+            </tr>
+            <tr>
+                <td>2007 - 2009</td>
+                <td>Industrial Engineer at Cessna Aircraft</td>
+            </tr>
+        </tbody>
         <tfoot></tfoot>
-        <tr>
-            <td>2018 - Present</td>
-            <td>Process Engineer at The Boeing Company</td>
-        </tr>
-        <tr>
-            <td>2015 - 2018</td>
-            <td>Quality Systems Engineer at The Boeing Company</td>
-        </tr>
-        <tr>
-            <td>2011 - 2015</td>
-            <td>Production Manufacturing Manager at The Boeing Company</td>
-        </tr>
-        <tr>
-            <td>2009 - 2011</td>
-            <td>Industrial Engineer Lead at The Boeing Company</td>
-        </tr>
-        <tr>
-            <td>2007 - 2009</td>
-            <td>Industrial Engineer at Cessna Aircraft</td>
-        </tr>
+        
     </table>
     <!--Add horizonal rules below-->
     <hr size="3" noshade>
