--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <table cellspacing ="20">
         <tr>
-            <td> <img src="https://media-exp1.licdn.com/dms/image/C5603AQFaFXrsEVqHAA/profile-displayphoto-shrink_400_400/0/1517757584565?e=1636588800&v=beta&t=yi4JPrjkut7Y6tthwwDjTr9cyMk36O-i2yzH72Rriuw" alt="Charles Profile Picture"></td>
+            <td> <img src="CharlesProfilePic.png"" alt="Charles Profile Picture"></td>
             <td><h1>Charles Anyanwu</h1> <!-- Can use "cellspacing"-->
                 <p><em>Process Engineer at <strong>the Boeing Company</strong>.</em></p>
                 <P><em> I graduated with my <strong> Bachelors of Science in Industrial Engineering</strong> and <br>
