--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <table cellspacing ="20">
         <tr>
-            <td> <img src="CharlesProfilePic.png"" alt="Charles Profile Picture"></td>
+            <td> <img src="images/CharlesProfilePic.png"" alt="Charles Profile Picture"></td>
             <td><h1>Charles Anyanwu</h1> <!-- Can use "cellspacing"-->
                 <p><em>Process Engineer at <strong>the Boeing Company</strong>.</em></p>
                 <P><em> I graduated with my <strong> Bachelors of Science in Industrial Engineering</strong> and <br>
